fix: remove bio ellipsis truncation

--- a/components/people/request-item.module.scss
+++ b/components/people/request-item.module.scss
@@ -56,7 +56,7 @@ $space: 20px;
     flex: none;
 
     .subjects {
-      padding: 0;
+      padding: 4px 0 0;
       flex-wrap: nowrap;
       display: inline-flex;
 
